@@ -9,6 +9,7 @@ Version 1.3.14+svn:
 
  * User interface
    * Made ESC clear hotkey when changing hotkeys.
+   * Linger mode overlay is also drawn over fog and shroud.
 
  * Miscellaneous and bug fixes
    * Added a more graceful handling of maps without a header.
