@@ -9,6 +9,7 @@ Version 1.3.14+svn:
    * damage statistics for the current turn also works for observers now
  * user interface:
    * Made ESC clear hotkey when changing hotkeys
+   * linger mode overlay is also drawn over fog and shroud (bug #10811)
  * miscellaneous and bug fixes:
    * Fixed boost test compile with 1.34.1
    * Make wesnoth work properly again if the datadir contains ../
